update dockerfile to jenkinsfile